--- a/index.html
+++ b/index.html
@@ -3,44 +3,62 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Milestone 2 from @paulasantos-bbk: HTML document with a form and responsive CSS.">
+    <meta name="description" content="Weather application with CSS.">
     <meta name="keywords" content="HTML, CSS">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Paula Angeriz-Santos">
-    <title>Paula Angeriz-Santos - Milestone 4</title>
+    <title>Weather app</title>
     <link href="./style.css" rel="stylesheet">
+    <script src="script.js" async></script>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about.html">About us</a></li>
-                <li><a href="./publications.html">Publications store</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="banner-title">
-            <h1>Milestone 4 - Shopping cart</h1>
-        </section>
-        <section class="about">
-            <h2 id="about">About us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
-        </section>
-        <section class="publications">
-            <h2 id="publications">Publications store</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore
-                magna aliqua. </p>
+    <div class="container">
+        <header>
+            <h1>Weather App</h1>
+        </header>
 
-            <button><a href="./publications.html">Buy our publications</a></button>
+        <main>
+            <section>
+                <h2>What's the weather like in...</h2>
+                <form>
 
-        </section>
+                    <label for="city">Choose a city:</label>
+                    <input type="text" list="cities" id="city" name="city">
 
-    </main>
+                    <datalist id="cities">
+                        <option value="London">London</option>
+                        <option value="New York">New York</option>
+                        <option value="A Coruna">Santiago de Compostela</option>
+                    </datalist>
+                </form>
+
+
+            </section>
+            <section>
+                <div class="container">
+                    <div class="app-title">
+                        <h2>Weather</h2>
+                    </div>
+                    <div class="notification"></div>
+                    <div class="weather-container">
+                        <div class="weather-icon">
+                            <img src="icons/unknown.png" alt="Weather icon">
+                        </div>
+                        <div class="temperature-value">
+                            <p>- °<span>C</span></p>
+                        </div>
+                        <div class="temperature-description">
+                            <p>-</p>
+                        </div>
+                        <div class="location">
+                            <p>-</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
 
 </body>
 
