--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <datalist id="cities">
                         <option value="London">London</option>
                         <option value="New York">New York</option>
-                        <option value="A Coruna">Santiago de Compostela</option>
+                        <option value="A Coruna">A Coruna</option>
                     </datalist>
                 </form>
 
