--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <form id="location-choice">
 
                     <label for="city">Select a city:</label>
-                    <select id="cities">
+                    <select id="city" class="city">
                         <option>weather for...</option>
                         <option value="Your location">Your location</option>
                         <option value="London">London</option>
@@ -32,7 +32,7 @@
                         <option value="A Coruna">A Coruna</option>
                     </select>
                     <button type="button" onclick="getFormValues()">Go!</button>
-                    <h2 id="location-result"></h2>
+                    <h2 class="city"></h2>
                 </form>
 
 
