--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <form id="location-choice">
 
                     <label for="city">Select a city:</label>
-                    <select id="city" class="cityId">
+                    <select id="cityId" class="cityId">
                         <option>weather for...</option>
                         <option value="Your location">Your location</option>
                         <option value="London">London</option>
