--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     </select>
                     <button id="go" type="button" onClick="getFormValues();">Go!</button>
                     <h2></h2>
+                    <p id="date-today"></p>
                 </form>
 
 
