--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Paula Angeriz-Santos">
     <title>Weather app</title>
     <link href="./style.css" rel="stylesheet">
-    <script src="./script-new.js" async></script>
+    <script src="./script.js" async></script>
 </head>
 
 <body>
@@ -20,7 +20,8 @@
 
         <main>
             <section>
-                <h2>What's the weather like in...</h2>
+                <h2>The weather today</h2>
+                <!-- 
                 <form id="form">
 
                     <label for="city">Select a city:</label>
@@ -35,23 +36,23 @@
                     <h2></h2>
                     <p id="date-today"></p>
                 </form>
-
+                -->
 
             </section>
             <section>
-                <div class="container">
+                <!--
                     <div id="weather-icon">
                         <img src="icons/unknown.png" alt="">
                     </div>
-                    <div id="temp-value">
-                        <p>- °<span>C</span></p>
-                    </div>
-                    <div id="temp-display">
-                        <p>-</p>
-                    </div>
-                    <div id="location">
-                        <p>-</p>
-                    </div>
+                    -->
+                <div id="temperature-value">
+                    <p>- °<span>C</span></p>
+                </div>
+                <div id="temperature-description">
+                    <p>-</p>
+                </div>
+                <div id="location">
+                    <p>-</p>
             </section>
         </main>
     </div>
